# job-finder

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
app/: __init__.py  config.py  main.py  models.py  platforms.py
app/api/: routes.py
app/collectors/: __init__.py  ats.py  base.py  feeds.py  hacker_news.py  public_pages.py  registry.py  values.py
app/database/: repository.py  schema.sql
app/pipeline/: __init__.py  canonical.py  fingerprint.py  gates.py  normalize.py  runner.py
app/services/: ai_gate.py  description.py  extractor.py  link_verifier.py  preferences.py  scheduler.py
docs/: SOURCES.md
scripts/: reformat_descriptions.py  start.py
tests/: conftest.py  test_canonical.py  test_config.py  test_description.py  test_extractor.py  test_gates.py  test_pipeline.py  test_preferences.py  test_public_pages.py  test_repository.py  test_source_collectors.py  test_values.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  hooks.ts  schema.ts
web/src/components/: index.ts
web/src/components/AddJobDialog/: index.tsx
web/src/components/Brand/: index.tsx
web/src/components/InitialsAvatar/: index.tsx
web/src/components/SourceHealthDialog/: index.tsx
web/src/hooks/: useTheme.ts
web/src/screens/Jobs/: EligibilityNotice.tsx  JobDetailsDialog.tsx  JobFacts.tsx  JobPreview.tsx  JobRow.tsx  JobsToolbar.tsx  QueueSidebar.tsx  RichDescription.tsx  format.ts  index.tsx  queue.ts
(+13 files in other folders)
